samples/_failures_safe/1761598416_f12842_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_25b57d58.c: In function ‘main’:
./samples/SAFE/__tmp_25b57d58.c:164:13: error: expected ‘;’ at end of input
  164 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_25b57d58.c:164:5: error: expected declaration or statement at end of input
  164 |     return 0
      |     ^~~~~~
